# wt-tools

./: .env.example  .gitignore  .shellcheckrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.ps1  install.sh  package-lock.json  pyproject.toml
.claude/: loop-test-iteration-2.txt  loop-test-iteration-3.txt  settings.json
.github/: pull_request_template.md
assets/: icon.icns
benchmark/: README.md  collect-results.md  diagnostic-framework.md  init-baseline.sh  init-with-memory.sh  preflight.sh  project-spec.md  run-guide.md  scoring-rubric.md  v3-results.md  v4-results.md  v5-results.md  v6-results.md
chat/: messages.jsonl
docs/: agent-messaging.md  architecture.md  benchmark-minishop-run4.md  cli-reference.md  config.md  configuration.md  developer-memory.md  getting-started.md  gui.md  mcp-server.md  memory-seeding-guide.md  orchestration.md  planning-guide.md  plugins.md  project-management.md  ralph.md  readme-guide.md  research-ruflo-2026-03-10.md  research-shodh-memory-audit.md  sentinel.md  team-sync.md  worktrees.md
gui/: __init__.py  chat_crypto.py  config.py  constants.py  logging_setup.py  main.py  requirements.txt  usage_calculator.py  utils.py
lib/: dashboard.py  editor.sh  frustration.py  metrics.py  notify-email.sh
mcp-server/: pyproject.toml  statusline.sh  wt_mcp_server.py
members/: andrs-szluka@szlukaandras-system-product-name.json  gabortatar@gabors-mac-mini.json  tatargabriella@tatar-macbook-air.json  tg@tg-system-product-name.json  tg@tgzengodesktop.json
openspec/: config.yaml  project-brief.md.template  project.md
scripts/: fetch-figma-design.py  generate-icon.py
templates/: cross-cutting-checklist.md  memory-seed.yaml  project-knowledge.yaml
tests/: __init__.py  test_chat_outbox.py  test_compaction.py  test_editor_detection.sh  test_editor_integration.py  test_frustration.py  test_memory_branch_tags.py  test_memory_cheat_sheet.py  test_memory_export_import.py  test_memory_rules.py  test_memory_sync.py  test_memoryd.py  test_metrics_dashboard.py  test_platform.py  test_plugins.py  test_ppid_chain.py  (+5 more)
(+1645 files in other folders)
